# 8051-microcontroller

./: CMakeLists.txt  LICENSE  Makefile  README.md  avrdude.conf  common.mk
apps/: CMakeLists.txt
apps/blink/: README.md
apps/blink/inc/: blink.h
apps/blink/src/: main.c
apps/button/: README.md
apps/button/inc/: button.h
apps/button/src/: main.c
apps/ext-int/: README.md
apps/ext-int/inc/: irq.h
apps/ext-int/src/: irq.c  main.c
apps/frequency-counter/: README.md
apps/frequency-counter/inc/: frequency_counter.h  uart.h
apps/frequency-counter/src/: main.c  uart.c
apps/led-pattern/: README.md
apps/led-pattern/inc/: led-pattern.h  led_pattern.h
apps/led-pattern/src/: main.c
apps/pwm-fade/: README.md
apps/pwm-fade/inc/: pwm.h
apps/pwm-fade/src/: main.c  pwm.c
apps/timer-delay/: CMakeLists.txt  README.md
apps/timer-delay/inc/: blink.h  timer.h
apps/timer-delay/src/: main.c  timer.c
apps/timer-interrupt/: README.md
apps/timer-interrupt/inc/: timer_interrupt.h
apps/timer-interrupt/src/: main.c
apps/uart-echo/: README.md
apps/uart-echo/inc/: uart.h
apps/uart-echo/src/: main.c  uart.c
apps/uart-hello/: README.md
apps/uart-hello/inc/: uart.h
apps/uart-hello/src/: main.c  uart.c
blink/: Makefile  README.md  main.c
config/: avrdude.conf  common.cmake  sdcc-toolchain.cmake
led-pattern/: Makefile  README.md  main.c
pwm-fade/: Makefile  README.md  main.c
uart-hello/: Makefile  README.md  main.c
